# yfix

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
Formula/: yfix.rb
benches/: pipeline.rs  transformers.rs
benches/fixtures/: large.txt  medium.txt  small.txt
docs/: help-ai.md
src/: config.rs  debug_log.rs  error.rs  input.rs  lib.rs  main.rs  multiplexer.rs  process_tree.rs  processor.rs
src/output/: mod.rs  os_clipboard.rs  osc52.rs  screen_buffer.rs  stdout.rs  tmux_buffer.rs  wsl_clipboard.rs
src/transformer/: compress_blank.rs  dedent.rs  join_wrapped.rs  mod.rs  strip_ansi.rs  strip_line_numbers.rs  strip_prompt.rs  strip_trailing.rs
tests/: integration.rs
