[package]
name = "yfix"
version = "1.2.1"
edition = "2021"
description = "Clean and copy terminal text — strip ANSI, line numbers, wrapping artifacts, and write to clipboard"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shimt/yfix"
authors = ["Shinichi MOTOKI <shinichi-motoki@overruns.org>"]
keywords = ["clipboard", "terminal", "tmux", "text", "copy"]
categories = ["command-line-utilities"]

[[bin]]
name = "yfix"
path = "src/main.rs"

[lib]
name = "yfix"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = "0.4"
anstream = "1"
base64 = { version = "0.22", features = ["std"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
is-terminal = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
terminal_size = "0.4"
thiserror = "2"
unicode-width = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "transformers"
harness = false

[[bench]]
name = "pipeline"
harness = false
